// Vitest Snapshot v1

exports[`plugins/media > should add media rules correctly 1`] = `
{
  "module": {
    "rules": [
      {
        "generator": {
          "filename": "static/media/[name].[contenthash:8][ext]",
        },
        "parser": {
          "dataUrlCondition": [Function],
        },
        "test": /\\\\\\.\\(mp4\\|webm\\|ogg\\|mp3\\|wav\\|flac\\|aac\\|mov\\)\\$/i,
        "type": "asset",
      },
    ],
  },
}
`;

exports[`plugins/media > should allow to use distPath.media to be empty string 1`] = `
{
  "module": {
    "rules": [
      {
        "generator": {
          "filename": "[name].[contenthash:8][ext]",
        },
        "parser": {
          "dataUrlCondition": [Function],
        },
        "test": /\\\\\\.\\(mp4\\|webm\\|ogg\\|mp3\\|wav\\|flac\\|aac\\|mov\\)\\$/i,
        "type": "asset",
      },
    ],
  },
}
`;

exports[`plugins/media > should allow to use distPath.media to modify dist path 1`] = `
{
  "module": {
    "rules": [
      {
        "generator": {
          "filename": "foo/[name].[contenthash:8][ext]",
        },
        "parser": {
          "dataUrlCondition": [Function],
        },
        "test": /\\\\\\.\\(mp4\\|webm\\|ogg\\|mp3\\|wav\\|flac\\|aac\\|mov\\)\\$/i,
        "type": "asset",
      },
    ],
  },
}
`;

exports[`plugins/media > should allow to use filename.media to modify filename 1`] = `
{
  "module": {
    "rules": [
      {
        "generator": {
          "filename": "static/media/foo[ext]",
        },
        "parser": {
          "dataUrlCondition": [Function],
        },
        "test": /\\\\\\.\\(mp4\\|webm\\|ogg\\|mp3\\|wav\\|flac\\|aac\\|mov\\)\\$/i,
        "type": "asset",
      },
    ],
  },
}
`;
